重写与兼容